--- a/FrontEnd/templates/connect.html
+++ b/FrontEnd/templates/connect.html
@@ -1,54 +1,39 @@
-<!-- TODO instead of using my own class 'hide', i should just use ng-show. -->
+<div id="column-divider"></div>
 
-<!-- TODO we are hdiing the settings-button right now because it does not do anything currently, but eventually we want to bring it back in
-<div id="settings-button"
-  ng-class="{
-      'black': true,
-      'hide': s.settings_pin !== null || s.adding_pins !== null}">
-    <span class="glyphicon glyphicon-cog"></span>
-</div>
--->
-
-<div id="column-divider"
-  ng-class="{
-      'gray-border': true,
-      'hide': s.settings_pin !== null || s.adding_pins !== null}">
+<div class="container-fluid">
+    <div class="row">
+        <div id="settings-button"
+          class="col-xs-6 col-xs-offset-3"
+          ng-click="goTo('app_settings');">
+            <span class="glyphicon glyphicon-cog"></span>
+        </div>
+    </div>
 </div>
 
 <div id="pins-container"
-  ng-class="{
-      'container-fluid': true,
-      'hide': s.settings_pin !== null || s.adding_pins !== null}">
+  class="container-fluid">
     <div class="row">
 
         <div id="sensors" class="col-xs-6">
-            <div
-              ng-class="{
-                  'sensors': true,
-                  'column-title': true,
-                  'hide': d.visible_sensors.length > 0}">
+            <div class="sensors column-title"
+              ng-show="d.visible_sensors.length === 0">
                 sensors
             </div>
-            <div id="{{pin.id}}" ng-repeat="pin in d.visible_sensors" sensor></div>
+            <div id="{{pin.id}}" ng-repeat="pin in d.visible_sensors" pin-original></div>
         </div>
 
         <div id="actuators" class="col-xs-6">
-            <div
-              ng-class="{
-                  'actuators': true,
-                  'column-title': true,
-                  'hide': d.visible_actuators.length > 0}">
+            <div class="actuators column-title"
+              ng-show="d.visible_actuators.length === 0">
                 actuators
             </div>
-            <div id="{{pin.id}}" ng-repeat="pin in d.visible_actuators" actuator></div>
+            <div id="{{pin.id}}" ng-repeat="pin in d.visible_actuators" pin-original></div>
         </div>
 
     </div>
 </div>
 
-<div id="connections-container"
-  ng-class="{
-      'hide': s.settings_pin !== null || s.adding_pins !== null}">
+<div id="connections-container">
     <div id="connect-{{c.source}}-{{c.target}}"
       ng-repeat="c in d.connections"
       class="connection"
@@ -63,8 +48,3 @@
 
     </div>
 </div>
-
-<div id="settings-container">
-    <div ng-repeat="pin in d.pins" pin-settings></div>
-</div>
-
