--- a/FrontEnd/templates/pin.html
+++ b/FrontEnd/templates/pin.html
@@ -3,19 +3,21 @@
       'pin': true,
       'sensor': pin.is_input,
       'actuator': !pin.is_input,
-      'yellow-border': pin.is_input,
-      'green-border': !pin.is_input,
       'connected': pin.is_connected,
       'analog': pin.is_analog,
       'digital': !pin.is_analog,
-      'activated': pin.is_input ?
-            activated_sensor === pin.id
-          : activated_sensor !== null,
-      'already-connected-to-activated-sensor': pin.is_input ?
-            false
-          : already_connected_to_activated_sensor() }">
-    <div class="pin-box" ng-click="show_settings_for(pin.id)">
-        <div class="pin-label">
+      'activated': activated_pin === pin.id,
+      'possible-connection': activated_pin !== null &&
+          activated_pin !== pin.id &&
+          d.pins[activated_pin].is_input !== pin.is_input,
+      'already-connected-to-activated-pin': activated_pin !== null &&
+          activated_pin !== pin.id &&
+          d.pins[activated_pin].is_input !== pin.is_input &&
+          ( d.pins[activated_pin].is_input ?
+                d.are_connected(activated_pin, pin.id)
+              : d.are_connected(pin.id, activated_pin) ) }">
+    <div class="pin-box" ng-click="goTo('pin_settings/' + pin.id);">
+        <div class="pin-label droid-font">
             {{pin.label}}
         </div>
         <div class="pin-name">
@@ -29,16 +31,11 @@
             </div>
         </div>
         <div class="endpoint-container"
-          ng-click="pin.is_input ?
-                toggle_activated($event, pin.id)
-              : connect_or_disconnect($event, pin.id)">
+          ng-click="pin_endpoint_click($event, pin.id)">
             <div id="{{pin.id}}-endpoint"
-              ng-class="{
-                  'endpoint': true,
-                  'yellow-bg': pin.is_input,
-                  'green-bg': !pin.is_input}">
-                  <div class="endpoint-inner"></div>
-                  <div class="slash"></div>
+              class="endpoint">
+                <div class="endpoint-inner"></div>
+                <div class="slash"></div>
             </div>
         </div>
     </div>
