Reverted back to 2.1 UI, but kept some of the UI enhancemente.

--- a/FrontEnd/templates/ssid_changed.html
+++ b/FrontEnd/templates/ssid_changed.html
@@ -3,9 +3,13 @@
     <div class="settings-inner">
         <div class="row">
             <div class="col-xs-12">
-                <p>The name of the wifi network has been changed to</p>
+                <p>The name of the wifi network is being changed to</p>
                 <span id="new-ssid">{{s.ssid}}</span>
-                <p>For the changes to go into effect, please unplug the Galileo, plug it back in, and wait a few minutes. When you see the new wifi network {{s.ssid}}, please connect to it and you'll be all set.<p>
+                <p>For the changes to go into effect, please unplug the Galileo, plug it back in, and wait a few minutes. When you see the new wifi network {{s.ssid}}, please connect to it and hit this button:<p>
+                <div class="button"
+                  ng-click="goTo('');">
+                    Home
+                </div>
             </div>
         </div>
     </div>
